<resources>
    <string name="app_name">Tp2</string>

    /////// REGISTRO Y LOGIN \\\\\\\\\\\\\\\\\\\\\\
    <string name="txt_dni">DNI</string>
    <string name="txt_pass">CONTRASEÑA</string>
    <string name="txt_login">LOGIN</string>
    <string name="txt_reg">REGISTRARME</string>
    <string name="txt_email">EMAIL</string>
    <string name="txt_name">NOMBRE</string>
    <string name="txt_lastname">APELLIDO</string>
    <string name="txt_commission">COMISION</string>
    <string name="txt_group">GRUPO</string>
    <string name="txt_repita_pass">REPITA LA CONTRASEÑA</string>
    //////   TAPA-PANTALLA ////////////////////////////////////////
    <string name="txt_Tapa_P_titulo">BIENVENIDO A TAPA PANTALLA</string>
    <string name="txt_Tapa_P_tutorial">Como Jugar: Inicie el juego y tape la pantalla con su mano(La pantalla se volvera roja). Luego de un tiempo levante la mano, complete cuantos segundos pasaron y toque el boton para obtener el resultado</string>
    <string name="txt_Tapa_P_ini">INICIAR JUEGO</string>
    <string name="txt_Tapa_P_seg_hint">CUANTOS SEGUNDOS PASARON ?</string>
    <string name="txt_Tapa_P_Resolver">OBTENER RESULTADO</string>
    /////  ROLLING COLOR ////////////////////////////////////////////////
    <string name="txt_Rolling_titulo">BIENVENIDO A ROLLING COLOR</string>
    <string name="txt_Rolling_tutorial">Como Jugar: toque el boton inicio y gire el celular lateralmente para producir cambios de color en la pantalla del celular. Luego de 15 segundos pare e introduzca cuantos cambios de color cree que ocurrieron y verifique su respuesta </string>
    <string name="txt_Rolling_ini">INICIAR JUEGO</string>
    <string name="txt_Rolling_Camb_Color_hint">CUANTOS CAMBIOS DE COLOR HUBO?</string>
    <string name="txt_Rolling_Resolver">VERIFICAR EL RESULTADO</string>
    ///// MAIN MENU//////////////////////////////////////////////////////
    <string name="txt_Menu_titulo">BIENVENIDO A SENSOR GAMES</string>
    <string name="txt_btn_tapa_pantalla_go">JUGAR TAPA PANTALLAS</string>
    <string name="txt_btn_rolling_color_go">JUGAR ROLLING COLOR</string>
    <string name="txt_btn_historial_sensor_go">HISTORIAL DE SENSORES</string>
    ///// HISTORIAL ///////////////////////////////////////////////////////
    <string name="txt_historial_titulo">HISTORIAL DE LOS SENSORES</string>
</resources>
