<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtDni"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="128dp"
        android:ems="10"
        android:hint="@string/txt_dni"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="201dp"
        android:ems="10"
        android:hint="@string/txt_pass"
        android:inputType="textPassword"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="141dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="66dp"
        android:layout_marginLeft="66dp"
        android:layout_marginTop="283dp"
        android:text="@string/txt_login"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnReg"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginBottom="35dp"
        android:onClick="irRegistrarme"
        android:text="@string/txt_reg"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="irTapaPant"
        android:text="Button" />

</RelativeLayout>